--- a/Index.html
+++ b/Index.html
@@ -18,12 +18,12 @@
                 <div class="title">Ambachtelijke roomboter appeltaart met spijs</div>
                 <div class="ItemContainer">
                     <div class="ItemButtons">
-                        <button onclick="testGrootFunc()" class="sizeButton">Normaal<br>(12 personen)</button>
-                        <button onclick="testKleinFunc()" class="sizeButton">Klein<br>(4-6 personen)</button>
-                        <button onclick="testInfoFunc()" class="sizeButton">Informatie<br>Contact</button>
+                        <button onclick="testGrootFunc1()" class="sizeButton">Normaal<br>(12 personen)</button>
+                        <button onclick="testKleinFunc1()" class="sizeButton">Klein<br>(4-6 personen)</button>
+                        <button onclick="testInfoFunc1()" class="sizeButton">Informatie<br>Contact</button>
                     </div>
                     <div class="SizeContainer" style="display: auto;">
-                        <div class="OrItemBox" id="InfoBox1" style="display: block;">
+                        <div class="OrItemBox info" id="InfoBox1" style="display: block;">
                             <p>Ouderwets lekker met rum-rozijn zoals we ze al jarenlang bakken! Met of zonder krokante kruimellaag.</p>                       
                         </div>
                         <div class="OrItemBox" id="grootBox1" style="display: none;">
@@ -47,12 +47,12 @@
                 <div class="title">Ambachtelijke roomboter appeltaart</div>
                 <div class="ItemContainer">
                     <div class="ItemButtons">
-                        <button onclick="testGrootFunc()" class="sizeButton">Normaal<br>(12 personen)</button>
-                        <button onclick="testKleinFunc()" class="sizeButton">Klein<br>(4-6 personen)</button>
-                        <button onclick="testInfoFunc()" class="sizeButton">Informatie<br>Contact</button>
+                        <button onclick="testGrootFunc2()" class="sizeButton">Normaal<br>(12 personen)</button>
+                        <button onclick="testKleinFunc2()" class="sizeButton">Klein<br>(4-6 personen)</button>
+                        <button onclick="testInfoFunc2()" class="sizeButton">Informatie<br>Contact</button>
                     </div>
                     <div class="SizeContainer" style="display: auto;">
-                        <div class="OrItemBox" id="InfoBox2" style="display: block;">
+                        <div class="OrItemBox info" id="InfoBox2" style="display: block;">
                             <p>Ouderwets lekker met rum-rozijn zoals we ze al jarenlang bakken! Met of zonder krokante kruimellaag.</p>                       
                         </div>
                         <div class="OrItemBox" id="grootBox2" style="display: none;">
