--- a/Index.html
+++ b/Index.html
@@ -24,7 +24,7 @@
                     </div>
                     <div class="SizeContainer" style="display: auto;">
                         <div class="OrItemBox info" id="InfoBox1" style="display: block;">
-                            <p>Ouderwets lekker met rum-rozijn zoals we ze al jarenlang bakken! Met of zonder krokante kruimellaag.</p>                       
+                            <p>Ouderwets lekker met rum-rozijnen zoals we ze al jarenlang bakken! Met of zonder krokante kruimellaag.</p>                       
                         </div>
                         <div class="OrItemBox" id="grootBox1" style="display: none;">
                             <order-items id="Appeltaart met spijs 12 personen" title="Appeltaart" price="2100"></order-items>
@@ -53,7 +53,7 @@
                     </div>
                     <div class="SizeContainer" style="display: auto;">
                         <div class="OrItemBox info" id="InfoBox2" style="display: block;">
-                            <p>Ouderwets lekker met rum-rozijn zoals we ze al jarenlang bakken! Met of zonder krokante kruimellaag.</p>                       
+                            <p>Ouderwets lekker met rum-rozijnen zoals we ze al jarenlang bakken! Met of zonder krokante kruimellaag.</p>                       
                         </div>
                         <div class="OrItemBox" id="grootBox2" style="display: none;">
                             <order-items id="Appeltaart 12 personen" title="Appeltaart" price="1750"></order-items>
