--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="order-item-test.css">
     <link rel="stylesheet" href="flexboxtest.css">
-    <title>Document</title>
+    <script type="module" src="./components/index.js"></script>
+    <title>pie-form</title>
 </head>
 <body>
 <div class="title" id="">bestelling plaatsen</div>
@@ -119,7 +119,6 @@
     </div>	
 </order-forms>
 <script src="flexboxtest.js"></script>
-<script src="order-item-test.js"></script>
 <script src="Size-switch-test.js"></script>
 </body>
 </html>
