--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <order-buttons></order-buttons>
                 
                 <div class="SizeContainer" style="display: auto;">
-                    <div class="OrItemBox" id="grootBox1" style="display: none;">
+                    <div class="OrItemBox" id="grootBox1" style="display: none;"><!-- set display to block to see items -->
                         <order-items id="Appeltaart met spijs 12 personen" title="Appeltaart" price="2100">
                         </order-items>
                         <order-items id="Appeltaart met spijs kruimel 12 personen" title="Kruimel" price="2200">
@@ -44,7 +44,7 @@
                         <order-items id="Appeltaart met spijs kruimel ONGEBAKKEN 12 personen" title="Kruimel ONGEBAKKEN"
                             price="1950"></order-items>
                     </div>
-                    <div class="OrItemBox" id="kleinBox1" style="display: none;">
+                    <div class="OrItemBox" id="kleinBox1" style="display: none;"><!-- set display to block to see items -->
                         <order-items id="Appeltaart met spijs 4-6 personen" title="Appeltaart" price="1150">
                         </order-items>
                         <order-items id="Appeltaart met spijs kruimel 4-6 personen" title="Kruimel" price="1200">
@@ -63,7 +63,7 @@
                 <div class="title">Ambachtelijke roomboter appeltaart</div>
                 <order-buttons></order-buttons>
                 <div class="SizeContainer" style="display: auto;">
-                    <div class="OrItemBox" id="grootBox2" style="display: none;">
+                    <div class="OrItemBox" id="grootBox2" style="display: none;"><!-- set display to block to see items -->
                         <order-items id="Appeltaart 12 personen" title="Appeltaart" price="1750"></order-items>
                         <order-items id="Appeltaart kruimel 12 personen" title="Kruimel" price="1850"></order-items>
                         <order-items id="Appeltaart 12 personen ONGEBAKKEN" title="Appeltaart ONGEBAKKEN" price="1500">
@@ -71,7 +71,7 @@
                         <order-items id="Appeltaart kruimel ONGEBAKKEN 12 personen" title="Kruimel ONGEBAKKEN"
                             price="1600"></order-items>
                     </div>
-                    <div class="OrItemBox" id="kleinBox2" style="display: none;">
+                    <div class="OrItemBox" id="kleinBox2" style="display: none;"><!-- set display to block to see items -->
                         <order-items id="Appeltaart 4-6 personen" title="Appeltaart" price="950"></order-items>
                         <order-items id="Appeltaart kruimel 4-6 personen" title="Kruimel" price="1000"></order-items>
                         <order-items id="Appeltaart 4-6 personen ONGEBAKKEN" title="Appeltaart ONGEBAKKEN" price="850">
@@ -89,7 +89,7 @@
                 <div class="title">Appeltaart met rasp van sinaasappel & gember</div>
                 <order-buttons></order-buttons>
                 <div class="SizeContainer" style="display: auto;">
-                    <div class="OrItemBox" id="grootBox3" style="display: none;">
+                    <div class="OrItemBox" id="grootBox3" style="display: none;"><!-- set display to block to see items -->
                         <order-items id="rasptaart 12 personen" title="Rasptaart" price="1850"></order-items>
                         <order-items id="Rasptaart kruimel 12 personen" title="Kruimel" price="1950"></order-items>
                         <order-items id="Rasptaart 12 personen ONGEBAKKEN" title="Rasptaart ONGEBAKKEN" price="1600">
@@ -97,7 +97,7 @@
                         <order-items id="Rasptaart kruimel 12 personen ONGEBAKKEN" title="Kruimel ONGEBAKKEN"
                             price="1700"></order-items>
                     </div>
-                    <div class="OrItemBox" id="kleinBox3" style="display: none;">
+                    <div class="OrItemBox" id="kleinBox3" style="display: none;"><!-- set display to block to see items -->
                         <order-items id="Rasptaart 4-6 personen" title="Rasptaart" price="975"></order-items>
                         <order-items id="Rasptaart kruimel 4-6 personen" title="Kruimel" price="1025"></order-items>
                         <order-items id="Rasptaart 4-6 personen ONGEBAKKEN" title="Rasptaart ONGEBAKKEN" price="875">
