included order item in <slot>

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </order-form>
     <hr>
     <h2>Erins HTML:</h2>
-    <order-form imagepath="">
+    <order-form imagepath="" ERIN>
         <div class="all-items-container">
             <order-item-container piesize="large">
                 <span slot="title">Appeltaart</span>
