correct piesize in json

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <order-form imagepath="" orders="orders.json">
     </order-form>
     <hr>
-    <h2>Erins HTML:</h2>
+    <h2>Erins HTML (Zonder correcte css):</h2>
     <order-form imagepath="" ERIN>
         <div class="all-items-container">
             <order-item-container piesize="large">
