--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <link rel="stylesheet" href="order-item-test.css">
     <link rel="stylesheet" href="flexboxtest.css">
-
     <!-- load all separate components -->
     <script type="module" src="./components/rt-orders/index.js"></script>
 
@@ -53,7 +53,7 @@
     <order-form imagepath="" orders="orders.json" style="width:100%;">
     </order-form>
     <hr>
-    <h2>Erins HTML (Zonder correcte css):</h2>
+    <!-- <h2>Erins HTML (Zonder correcte css):</h2>
     <order-form imagepath="" ERIN>
         <div class="all-items-container">
             <order-item-container piesize="large">
@@ -188,12 +188,12 @@
                 </div>
             </order-item-container>
         </div>
-    </order-form>
+    </order-form> -->
     <footer>
-        bon:
+ <!--       bon:
         <textarea class="itemSummary orderTotal" id="bon"></textarea>
     </footer>
-    <script src="Size-switch-test.js"></script>
+    <script src="Size-switch-test.js"></script> -->
 </body>
 
 </html>
